# panoptica

./: .gitignore  LICENSE  README.md  coursework.py  pyproject.toml
src/panoptica/: __init__.py  opticalsystem.py
src/panoptica/science/: __init__.py  linalg.py  numerical.py  phys.py
tests/: coursework.py  root_method.py  test_solver.py
