[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "panoptica"
version = "0.1.0"
authors = [
  {name="zipperman1"},
]
description = "A simple library for geometrical optics simulation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Framework :: Matplotlib",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/zipperman1/coursework"
"Bug Tracker" = "https://github.com/zipperman1/coursework/issues"
